tests/baselines/reference/asyncArrowFunctionCapturesArguments_es5(target=es5).errors.txt
asyncArrowFunctionCapturesArguments_es5.ts(4,52): error TS2496: The 'arguments' object cannot be referenced in an arrow function in ES5. Consider using a standard function expression.


==== asyncArrowFunctionCapturesArguments_es5.ts (1 errors) ====
    class C {
       method() {
          function other() {}
          var fn = async () => await other.apply(this, arguments);
                                                       ~~~~~~~~~
!!! error TS2496: The 'arguments' object cannot be referenced in an arrow function in ES5. Consider using a standard function expression.
       }
    }
    